--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ p {
 }
 
 #main-doc {
-  /* position: absolute; */
   margin-left: 310px;
   padding: 20px;
   margin-bottom: 110px;
@@ -81,9 +80,12 @@ p {
     margin: 0px;
 }
 
+footer {
+  text-align: center;
+}
+
 @media only screen and (max-width: 815px) {
   #main-doc {
-    /* position: relative; */
     margin-left: 0px;
     margin-top: 330px;
   }
